tests/typecheck/bad/str-bad-char-2.scilexp
let s2 = "abcd\a" in
s2
